add some basic tests

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -4,3 +4,6 @@ project(thrift_cmake)
 
 set(EXECUTABLE_OUTPUT_PATH ${CMAKE_BINARY_DIR})
 add_subdirectory(compiler)
+
+enable_testing()
+add_subdirectory(tests)
