first working yarp demo

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -4,6 +4,7 @@ project(thrift_cmake)
 
 set(EXECUTABLE_OUTPUT_PATH ${CMAKE_BINARY_DIR})
 add_subdirectory(compiler)
+add_subdirectory(demo)
 
 enable_testing()
 add_subdirectory(tests)
